# AI-Fullstack-Demos

./: .gitignore  intact-AI-dev-Intermediate.md  readme.md
.github/workflows/: pytest-react-agent.yml
agents/REACT/: requirements.txt
ai/: Untitled.ipynb  langsmith.py  pyproject.toml
ai/REACT/: .dockerignore  Dockerfile.test  docker-compose.test.yml  simple_tool_calling.py  test_agent.py
ai/mcp/: mathserver.py
ai/mcp/greet/: greet_client.py  greet_server_sse.py
ml-insurance/: intact-AI-dev-Intermediate.md  requirements-dev.txt  requirements-dev.txt_old  what-we-do.md
ml-insurance/app/: dockerfile  main.py
ml-insurance/client/: Dockerfile  package-lock.json  package.json
ml-insurance/client/src/: App.css  App.tsx  index.css
ml-insurance/client/src/components/: PredictionForm.tsx
ml-insurance/client/src/hooks/: useFeatureNames.ts  usePrediction.ts  useSampleData.ts
ml-insurance/client/src/services/: api.ts
ml-insurance/client/src/store/: predictionStore.ts
ml-insurance/client/src/types/: insurance.ts
ml-insurance/docker-compose/: docker-compose.yml
ml-insurance/ml/features/: preprocessor.py
ml-insurance/ml/training/: train.py
ml-insurance/notebooks/: safe-driver-prediction.ipynb
ml-insurance/scripts/: setup-backend.sh  setup-frontend.sh
ml/data/: loader.py
